@@ -3,7 +3,13 @@ INCLUDES = $(GTK_CFLAGS) $(LIBRSVG_CFLAGS)
 enginedir = $(libdir)/gtk-2.0/$(GTK_VERSION)/engines
 themedir = $(datadir)/themes
 
-engine_LTLIBRARIES = libsvg.la
+if ENABLE_GTK_ENGINE
+target_rsvg_engine = libsvg.la
+else
+target_rsvg_engine =
+endif
+
+engine_LTLIBRARIES = $(target_rsvg_engine)
 
 libsvg_la_SOURCES = 		\
 	svg-draw.c		\
