@@ -1,5 +1,9 @@
 2002-09-25  Dom Lachowicz <doml@appligent.com>
 
+	* (configure.in): --enable-gtk-theme argument (default=yes)
+	
+2002-09-25  Dom Lachowicz <doml@appligent.com>
+
 	* (): Import and create a SVG based GTK+ theme engine
 
 2002-09-22  Dom Lachowicz <doml@appligent.com>
